style.css
@charset "utf-8";

body {
    background-color: wheat;
    height: 100vh;
    padding: 0px;
    margin: 0px;
}

button {
    background-color: rgb(241, 178, 178);
    font-size: 16px;
    border-radius: 25%;
    height: 55px;
    width: 55px;
    text-align: center;
    display: inline-block;
    margin: 5px;
}

.center {
    padding: 5%;
    border: 3px solid rgba(255, 255, 255, 0);
  }

.ts {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    background-color: white;
    min-width: 100px;
    max-width: 350px;
    border-radius: 3%;
    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.61);
    padding-top: 30px;
    padding-bottom: 25px;
}
#viewfinder{
    padding-top: 10%;
    padding-bottom: 10%;
    margin-left: 10%;
    margin-right: 10%;
    background-color: rgb(202, 202, 202);
    border-radius: 10px;
    box-shadow: inset 2px 2px 3px;
    font-size: 30px;
}

#keyboard {
    padding-top: 5%;
    padding-bottom: 5%;
    margin-left: 10%;
    margin-right: 10%;

}

